[gd_scene load_steps=10 format=3 uid="uid://c60oafqqub4v6"]

[ext_resource type="Script" path="res://main.gd" id="1_ag4pq"]
[ext_resource type="PackedScene" uid="uid://cqbftgj31w5se" path="res://scenes/world/world.tscn" id="2_2ksgi"]
[ext_resource type="PackedScene" uid="uid://cy2chtlbsa1ln" path="res://scenes/player/player.tscn" id="3_m1rs5"]

[sub_resource type="Animation" id="Animation_11ea0"]
resource_name = "sun"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight3D:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.142, -3.142]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DirectionalLight3D:rotation:y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.2, -0.2, 0.2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DirectionalLight3D:light_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5, 6, 7.6, 9.4, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.180392, 0.2, 0.239216, 1), Color(0.537255, 0, 0.156863, 1), Color(0.815686, 0.392157, 0, 1), Color(1, 1, 1, 1), Color(0.701961, 0.211765, 0.113725, 1), Color(0.180392, 0.2, 0.239216, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_up3jh"]
_data = {
"sun": SubResource("Animation_11ea0")
}

[sub_resource type="Environment" id="Environment_lbmsn"]

[sub_resource type="Animation" id="Animation_840pn"]
resource_name = "camera_rotation"
length = 15.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Target:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tebe1"]
_data = {
"camera_rotation": SubResource("Animation_840pn")
}

[sub_resource type="LabelSettings" id="LabelSettings_40mdy"]
font_size = 64

[node name="Main" type="Node3D"]
script = ExtResource("1_ag4pq")

[node name="World" parent="." instance=ExtResource("2_2ksgi")]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("3_m1rs5")]
unique_name_in_owner = true

[node name="Chunks" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.980066, -8.07713e-05, -0.198669, 1.50996e-07, -1, 0.000407306, -0.198669, -0.000399217, -0.980066, 0, 0, 0)
light_color = Color(0.180392, 0.2, 0.239216, 1)
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_up3jh")
}
autoplay = "sun"
speed_scale = 0.2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lbmsn")

[node name="Target" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1.90735e-06, 141.535, 62)
projection = 1
size = 42.441

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Target"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tebe1")
}
autoplay = "camera_rotation"

[node name="Menu" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -11.5
offset_right = 32.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
text = "BABACRAFT"
label_settings = SubResource("LabelSettings_40mdy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="player_entered_chunk" from="." to="." method="_on_player_entered_chunk"]
[connection signal="chunk_displayed" from="World" to="." method="_on_world_chunk_displayed"]
[connection signal="block_broken" from="Player" to="." method="_on_player_block_broken"]
[connection signal="block_placed" from="Player" to="." method="_on_player_block_placed"]
[connection signal="moved" from="Player" to="." method="_on_player_moved"]
[connection signal="pressed" from="Menu/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
